--- a/public/CSS/queries.css
+++ b/public/CSS/queries.css
@@ -88,7 +88,7 @@
     .navbar-link{
         color: black;
         font-weight: 1000;
-        font-size: 1em;
+        font-size: 16px;
     }
 
     .hero-section{
